feat: support code generation hint (annotation) in comment
