# _example/api/order/service.go
@@ -4,14 +4,30 @@ import (
 	"context"
 )
 
+// OrderService 订单服务定义
+//
+// @swagger-info-version v1
+// @swagger-info-title 订单服务
+// @http-base-path /api/v1/order-service/
+//
 //go:generate jk generate all -t OrderService --api-version v2
 type OrderService interface {
 	// CreateOrder 创建订单
+	// @http-method post
+	// @http-path /api/v1/order-service/order
 	CreateOrder(ctx context.Context, req *CreateOrderRequest) (*CreateOrderResponse, error)
 	// CancelOrder 取消订单
+	// @http-method post
+	// @http-path /api/v1/order-service/order/cancel
 	CancelOrder(ctx context.Context, req *CancelOrderRequest) (*CancelOrderResponse, error)
-	// GetOrderDetail 获取订单详情
-	GetOrderDetail(ctx context.Context, req *GetOrderDetailRequest) (*GetOrderDetailResponse, error)
+	// OrderDetail 获取订单详情
+	// @http-method get
+	// @http-path /api/v1/order-service/order/detail
+	OrderDetail(ctx context.Context, req *GetOrderDetailRequest) (*GetOrderDetailResponse, error)
+	// Update 更新订单
+	// @http-method put
+	// @http-path /api/v1/order-service/order
+	Update(ctx context.Context, req *UpdateOrderRequest) (*UpdateOrderResponse, error)
 }
 
 // CreateOrderRequest 创建订单请求结构体
@@ -36,6 +52,17 @@ type CreateOrderResponse struct {
 	Message string `json:"message"`
 	// 订单号
 	OrderID string `json:"order_id"`
+}
+
+// UpdateOrderRequest 更新订单请求
+type UpdateOrderRequest struct {
+	OrderInfo []OrderItem `json:"order_info"`
+}
+
+// UpdateOrderResponse 更新订单响应
+type UpdateOrderResponse struct {
+	Code    int    `json:"code"`
+	Message string `json:"message"`
 }
 
 // CancelOrderRequest 取消订单请求结构体
